# cattle-use-case-barometer

./: .gitignore  .pre-commit-config.yaml  README.md  function_app.py  pyproject.toml
.github/workflows/: dev_barometerprocessing.yml
Data/: .gitignore
DataCleaning/: .gitignore  ARSIA.Rmd  ARSIA.html  DGZ.Rmd  DGZ.html  DGZ.nb.html  DGZ.tex  DGZ_morefiles.html  France_Vigigrip.Rmd  GD.Rmd  GD.html  Ireland - v2.Rmd  Ireland---v2.html  Ireland.Rmd  Ireland.aux  Ireland.html  Ireland.out  PathoSense.Rmd  PathoSense.html  UnionAllNotebook.Rmd  Union_documents.Rmd  Union_documents.html  barometer_combined
Tutorials_dummy/: Dummyfile_widedata_1.xlsx  Final_format_05072023.xlsx
Visuals/: Version2.twb  Version3.twb  Version4.twb  Version5.twb
src/barometer/: __about__.py  graph.py  merger.py
src/barometer/lab/: _common.py  arsia.py  dgz.py  gd.py  ireland.py  pathosense.py
